// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should allow styles override 1`] = `
.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-right: 0.5rem;
}

.emotion-3 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #EBF4FA;
  color: #0A67D1;
  border-color: #0A67D1;
  color: red;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: blue;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 3a1.75 1.75 0 1 1-1.75 1.75A1.75 1.75 0 0 1 12 5zm2.19 14H9.81v-1.75h.44a.44.44 0 0 0 .44-.44v-4.37a.44.44 0 0 0-.44-.44h-.44v-1.75h3.5v6.56a.44.44 0 0 0 .44.44h.44z"
        data-name="information-circle"
      />
    </svg>
    <div
      class="emotion-1"
    >
      Information.
    </div>
  </div>
</div>
`;

exports[`Alert should render correctly 1`] = `
.emotion-6 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #EBF4FA;
  color: #0A67D1;
  border-color: #0A67D1;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  margin-left: auto;
  padding-left: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-right: 0.5rem;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-3 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-13 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #E3FAD2;
  color: #097D05;
  border-color: #097D05;
}

.emotion-20 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FAF0E8;
  color: #BF4600;
  border-color: #BF4600;
}

.emotion-27 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FCF0F0;
  color: #D83A2E;
  border-color: #D83A2E;
}

<div>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 3a1.75 1.75 0 1 1-1.75 1.75A1.75 1.75 0 0 1 12 5zm2.19 14H9.81v-1.75h.44a.44.44 0 0 0 .44-.44v-4.37a.44.44 0 0 0-.44-.44h-.44v-1.75h3.5v6.56a.44.44 0 0 0 .44.44h.44z"
          data-name="information-circle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Information.
      </div>
      <span
        class="emotion-4"
      >
        <button
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
                data-name="times"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-13"
  >
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm-1.29 14.21l-4.42-4.4 1.42-1.42 3 3 5.59-5.6 1.42 1.42z"
          data-name="check-circle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Success message.
      </div>
      <span
        class="emotion-4"
      >
        <button
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
                data-name="times"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-20"
  >
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M21.83 19L12.92 3.62a1 1 0 0 0-1.84 0L2.17 19c-.46.88.07 2 .92 2h17.82c.85 0 1.38-1.14.92-2zM11 7h2v7h-2zm1 12a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 19z"
          data-name="exclamation-triangle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Alert message.
      </div>
      <span
        class="emotion-4"
      >
        <button
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
                data-name="times"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    class="emotion-27"
  >
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 12A10 10 0 1 0 12 2 10 10 0 0 0 2 12zm2 0a7.92 7.92 0 0 1 1.69-4.9L16.9 18.31A7.92 7.92 0 0 1 12 20a8 8 0 0 1-8-8zm16 0a7.92 7.92 0 0 1-1.69 4.9L7.1 5.69A7.92 7.92 0 0 1 12 4a8 8 0 0 1 8 8z"
          data-name="ban"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Error message.
      </div>
      <span
        class="emotion-4"
      >
        <button
          class="emotion-3"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="emotion-2"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
                data-name="times"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Alert should render correctly when inline 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #EBF4FA;
  color: #0A67D1;
  border-color: #0A67D1;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1rem;
  margin-right: 0.5rem;
}

.emotion-7 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #E3FAD2;
  color: #097D05;
  border-color: #097D05;
}

.emotion-11 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FAF0E8;
  color: #BF4600;
  border-color: #BF4600;
}

.emotion-15 {
  padding: 0 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #FCF0F0;
  color: #D83A2E;
  border-color: #D83A2E;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm0 3a1.75 1.75 0 1 1-1.75 1.75A1.75 1.75 0 0 1 12 5zm2.19 14H9.81v-1.75h.44a.44.44 0 0 0 .44-.44v-4.37a.44.44 0 0 0-.44-.44h-.44v-1.75h3.5v6.56a.44.44 0 0 0 .44.44h.44z"
          data-name="information-circle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Information.
      </div>
    </div>
  </div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm-1.29 14.21l-4.42-4.4 1.42-1.42 3 3 5.59-5.6 1.42 1.42z"
          data-name="check-circle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Success message.
      </div>
    </div>
  </div>
  <div
    class="emotion-11"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M21.83 19L12.92 3.62a1 1 0 0 0-1.84 0L2.17 19c-.46.88.07 2 .92 2h17.82c.85 0 1.38-1.14.92-2zM11 7h2v7h-2zm1 12a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 19z"
          data-name="exclamation-triangle"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Alert message.
      </div>
    </div>
  </div>
  <div
    class="emotion-15"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 12A10 10 0 1 0 12 2 10 10 0 0 0 2 12zm2 0a7.92 7.92 0 0 1 1.69-4.9L16.9 18.31A7.92 7.92 0 0 1 12 20a8 8 0 0 1-8-8zm16 0a7.92 7.92 0 0 1-1.69 4.9L7.1 5.69A7.92 7.92 0 0 1 12 4a8 8 0 0 1 8 8z"
          data-name="ban"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Error message.
      </div>
    </div>
  </div>
</div>
`;
